--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <!-- Заголовок -->
         <header>
-            <h1><i class="fas fa-project-diagram"></i> Название</h1>
+            <h1><i class="fas fa-project-diagram"></i>Интерактивный словарь</h1>
             <div class="controls">
                 <div class="theme-selector">
                     <h3><i class="fas fa-book"></i> Thema wählen</h3>
